<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main_BMRFrag">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        >

    <TextView
        android:id="@+id/tv_lbl_BMR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/bmr_lbl"
        android:textSize="20sp"
        />

    <TextView
        android:id="@+id/tv_BMR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/bmr_data"
        android:textSize="20sp"
        android:textAlignment="viewEnd"
        />

    <TextView
        android:id="@+id/tv_lbl_ActivityLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginTop="32dp"
        android:text="@string/actlvl_lbl"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginTop="32dp"
        android:text="@string/actlvl_data"
        android:textSize="20sp"
        android:textAlignment="viewEnd"
        />
    </GridLayout>

    <Spinner
        android:id="@+id/spActivityLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/actlvl_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />



</LinearLayout>