<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="32dp"
    tools:context=".ProfileFrag">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_first_name"
            android:inputType="textPersonName"
            />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_last_name"
            android:inputType="textPersonName"
            android:layout_marginTop="16dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        >

        <LinearLayout
            android:id="@+id/age_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                />
            <NumberPicker
                android:id="@+id/np_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/height_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                />
            <NumberPicker
                android:id="@+id/np_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weight_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight_n_kg"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                />
            <NumberPicker
                android:id="@+id/np_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/activity_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/age_container"
            android:layout_marginTop="16dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="16dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actlvl_lbl"
                android:textSize="20sp"
                />

            <Spinner
                android:id="@+id/spActivityLevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/actlvl_content_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sex_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/weight_container"
            android:layout_marginTop="16dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sex"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                />

            <RadioGroup
                android:id="@+id/radio_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioMale"
                    android:checked="true"
                    />
                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radioFemale"
                    />
            </RadioGroup>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="32dp"
        >

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/EtLocation"
            />

        <Button
            android:id="@+id/btnLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fontawesome_solid"
            android:text="@string/font_awesome_mapmarker"
            android:textSize="20sp"
            android:backgroundTint="@color/btn_bg"
            android:textColor="@color/btn_text"
            android:layout_marginStart="16dp"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        >

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/profile_picture"
            android:outlineAmbientShadowColor="@color/black"
            android:src="@drawable/anon_profile_pic"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:outlineProvider="bounds"
            />

        <Button
            android:id="@+id/btnPic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fontawesome_solid"
            android:text="@string/font_awesome_camera"
            android:textSize="20sp"
            android:backgroundTint="@color/btn_bg"
            android:textColor="@color/btn_text"
            android:layout_below="@+id/profilePic"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnSave"
        android:textSize="20sp"
        android:backgroundTint="@color/btn_bg"
        android:textColor="@color/btn_text"
        android:layout_marginTop="32dp"
        />

</LinearLayout>