<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainFrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/ivThumbnail"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:contentDescription="@string/profile_picture"
            android:outlineAmbientShadowColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/anon_profile_pic"
            />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:text="@string/placeholder_username"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/text"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            />

        <Button
            android:id="@+id/btnEditProfile"
            android:layout_width="48dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:padding="0dp"
            android:fontFamily="@font/fontawesome_solid"
            android:text="@string/font_awesome_pen"
            android:textSize="20sp"
            android:backgroundTint="@color/btn_bg"
            android:textColor="@color/btn_text"
            app:layout_constraintBottom_toBottomOf="@+id/tvUsername"
            app:layout_constraintStart_toEndOf="@+id/tvUsername"
            app:layout_constraintTop_toTopOf="@+id/tvUsername"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            >

            <TextView
                android:id="@+id/tv_lbl_BMR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/bmr_lbl"
                android:textSize="20sp"
                android:textColor="@color/label_text"
                />

            <TextView
                android:id="@+id/tvBMR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:text="@string/bmr_data"
                android:textSize="20sp"
                android:textAlignment="viewEnd"
                android:textColor="@color/text"
                />

            <TextView
                android:id="@+id/tv_lbl_ActivityLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="32dp"
                android:text="@string/actlvl_lbl"
                android:textSize="20sp"
                android:textColor="@color/label_text"
                />

            <TextView
                android:id="@+id/tvActivityLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginTop="32dp"
                android:text="@string/actlvl_data"
                android:textSize="20sp"
                android:textAlignment="viewEnd"
                android:textColor="@color/text"
                />
        </GridLayout>

        <Spinner
            android:id="@+id/spActivityLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/actlvl_content_description"
            android:minHeight="48dp"
            android:popupBackground="@color/spinner_bg"
            android:spinnerMode="dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tvSteps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="0"
            android:textSize="48sp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:orientation="horizontal"
            android:layout_gravity="center"

            >
            <TextView
                android:id="@+id/tvArrowLeft"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontawesome_solid"
                android:text="@string/font_awesome_arrow_left"
                android:textSize="20sp"
                android:layout_marginRight="10dp"
                android:visibility="gone"
                />
            <TextView
                android:id="@+id/tvStepsLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_label_off"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/tvArrowRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/fontawesome_solid"
                android:text="@string/font_awesome_arrow_right"
                android:textSize="20sp"
                android:layout_marginLeft="10dp"
                android:visibility="visible"
                />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            >

            <Button
                android:id="@+id/btnHikes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/btn_hikes"
                android:backgroundTint="@color/btn_bg"
                android:textColor="@color/btn_text"
                />

            <Button
                android:id="@+id/btnWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_weather"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/btn_bg"
                android:textColor="@color/btn_text"
                />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/boxWeather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:visibility="invisible"
            >

            <TextView
                android:id="@+id/tvWeather"
                android:layout_width="278dp"
                android:layout_height="278dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:textSize="24sp"
                android:text="@string/weather_loading" />

            <Button
                android:id="@+id/btnMoreWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:backgroundTint="@color/btn_bg"
                android:textColor="@color/btn_text"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                />

<!--            <Button-->
<!--                android:id="@+id/btnSteps"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_alignParentStart="true"-->
<!--                android:layout_alignParentEnd="true"-->
<!--                android:layout_alignParentBottom="true"-->
<!--                android:layout_marginStart="133dp"-->
<!--                android:layout_marginEnd="133dp"-->
<!--                android:layout_marginBottom="111dp"-->
<!--                android:text="Steps" />-->

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>