<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main_UserInfoFrag">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="69dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:contentDescription="@string/profile_picture"
        android:outlineAmbientShadowColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/anon_profile_pic"
        />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/placeholder_username"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="48dp"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:padding="0dp"
        android:fontFamily="@font/fontawesome_solid"
        android:text="@string/font_awesome_pen"
        android:textSize="20sp"
        android:backgroundTint="@color/white"
        android:textColor="#888"
        app:layout_constraintBottom_toBottomOf="@+id/tvUsername"
        app:layout_constraintStart_toEndOf="@+id/tvUsername"
        app:layout_constraintTop_toTopOf="@+id/tvUsername"
        />



</LinearLayout>